--- a/dwm.1
+++ b/dwm.1
@@ -41,6 +41,17 @@ Either of these files may be omitted.
 .SH OPTIONS
 .TP
 .B \-v
+.P
+On start, dwm can start additional programs that may be specified in two special
+shell scripts (see the FILES section below), autostart_blocking.sh and
+autostart.sh.  The former is executed first and dwm will wait for its
+termination before starting.  The latter is executed in the background before
+dwm enters its handler loop.
+.P
+Either of these files may be omitted.
+.SH OPTIONS
+.TP
+.B \-v
 prints version information to stderr, then exits.
 .SH USAGE
 .SS Status bar
@@ -102,15 +113,12 @@ Toggles between current and previous layout.
 .TP
 .B Mod1\-Control\-,
 Cycles backwards in layout list.
-<<<<<<<
-=======
 .TP
 .B Mod1\-Control\-.
 Cycles forwards in layout list.
 .TP
 .B Mod1\-j
 Focus next window.
->>>>>>>
 .TP
 .B Mod1\-Control\-.
 Cycles forwards in layout list.
@@ -185,6 +193,24 @@ Toggles focused window between floating and tiled state.
 .TP
 .B Mod1\-Button3
 Resize focused window while dragging. Tiled windows will be toggled to the floating state.
+.SH FILES
+The files containing programs to be started along with dwm are searched for in
+the following directories:
+.IP "1. $XDG_DATA_HOME/dwm"
+.IP "2. $HOME/.local/share/dwm"
+.IP "3. $HOME/.dwm"
+.P
+The first existing directory is scanned for any of the autostart files below.
+.TP 15
+autostart.sh
+This file is started as a shell background process before dwm enters its handler
+loop.
+.TP 15
+autostart_blocking.sh
+This file is started before any autostart.sh; dwm waits for its termination.
+.SH CUSTOMIZATION
+dwm is customized by creating a custom config.h and (re)compiling the source
+code. This keeps it fast, secure and simple.
 .SH FILES
 The files containing programs to be started along with dwm are searched for in
 the following directories:
